--- a/scss/style.css
+++ b/scss/style.css
@@ -377,7 +377,7 @@ footer {
   grid-template-columns: repeat(3, 1fr);
 }
 .market__prod__products {
-  padding: 76px 80px;
+  padding: 64px 80px;
   font-size: 20px;
   line-height: 24px;
   font-family: GothamBold;
@@ -475,14 +475,11 @@ footer {
   padding-bottom: 122px;
 }
 
-.bigwrapper {
-  height: 100vh;
-}
-
 .contact {
   background: url(../img/bgcontact.jpg);
   background-size: cover;
   background-position: center center;
+  height: calc(100vh - 120px);
 }
 
 .headercontact {
@@ -600,11 +597,11 @@ footer {
   padding: 24px 24px;
 }
 
-@media (max-width: 1280px) {
-  .second__right {
-    padding: 50px;
-  }
+.secondwork {
+  align-items: start;
+}
 
+@media (max-width: 1280px) {
   .company__info__extra {
     padding: 40px 20px;
   }
