--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1011,6 +1011,7 @@ footer {
       &__var {
         text-align: center;
         padding: 24px 0;
+        padding-bottom: 28px; 
         border-bottom: 1px solid #e2e0e6;
         &:nth-child(odd) {
           border-right: none;
@@ -1025,11 +1026,12 @@ footer {
         &-text {
           font-size: 14px;
           line-height: 18px;
+          margin-bottom: 10px;
         }
         &-textlast {
           font-size: 14px;
           line-height: 18px;
-          margin-bottom: 16px;
+          margin-bottom: 24px;
         }
       }
     }
