--- a/scss/style.css
+++ b/scss/style.css
@@ -726,7 +726,7 @@ footer {
 
 #modal-window {
   position: absolute;
-  top: 20%;
+  bottom: 25%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
@@ -1285,17 +1285,18 @@ footer {
     margin-bottom: 0px;
   }
   .headercontact {
-    margin-bottom: 20px;
+    margin-bottom: 26px;
   }
   .middlecont__title {
-    margin-bottom: 20px;
+    margin-bottom: 23px;
   }
   .middlecont__vest {
-    margin-bottom: 5px;
+    margin-bottom: 10px;
   }
   .middlecont__address {
     font-size: 14px;
     line-height: 18px;
+    margin-bottom: 7px;
   }
   .middlecont__mail {
     font-size: 14px;
@@ -1341,7 +1342,8 @@ footer {
     margin-bottom: 0px;
   }
   #modal-window {
-    top: 10%;
+    bottom: -8%;
+    height: 100%;
     height: 552px;
     border-radius: 24px 24px 0px 0px;
   }
@@ -1365,12 +1367,6 @@ footer {
   .modal-btn {
     padding-bottom: 0px;
     padding-top: 16px;
-  }
-}
-
-@media (max-width: 320px) {
-  #modal-window {
-    top: 8%;
   }
 }
 /*# sourceMappingURL=style.css.map */
