--- a/scss/style.scss
+++ b/scss/style.scss
@@ -553,7 +553,7 @@ footer {
 
 #modal-window {
   position: absolute;
-  top: 20%;
+  bottom: 25%;
   left: 50%;
   transform: translate(-50%, -50%);
   width: 859px;
@@ -1127,18 +1127,19 @@ footer {
     }
   }
   .headercontact {
-    margin-bottom: 20px;
+    margin-bottom: 26px;
   }
   .middlecont {
     &__title {
-      margin-bottom: 20px;
+      margin-bottom: 23px;
     }
     &__vest {
-      margin-bottom: 5px;
+      margin-bottom: 10px;
     }
     &__address {
       font-size: 14px;
       line-height: 18px;
+      margin-bottom: 7px;
     }
     &__mail {
       font-size: 14px;
@@ -1191,7 +1192,8 @@ footer {
     }
   }
   #modal-window {
-    top: 10%;
+    bottom: -8%;
+    height: 100%;
     height: 552px;
     border-radius: 24px 24px 0px 0px;
   }
@@ -1222,7 +1224,4 @@ footer {
 }
 
 @media (max-width: 320px) {
-  #modal-window {
-    top: 8%;
-  }
 }
