--- a/scss/style.css
+++ b/scss/style.css
@@ -726,7 +726,7 @@ footer {
 
 #modal-window {
   position: absolute;
-  bottom: 25%;
+  bottom: 10%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
@@ -1342,7 +1342,8 @@ footer {
     margin-bottom: 0px;
   }
   #modal-window {
-    bottom: -8%;
+    position: fixed;
+    top: 60%;
     height: 100%;
     height: 552px;
     border-radius: 24px 24px 0px 0px;
