--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1191,7 +1191,7 @@ footer {
   }
   #modal-window {
     position: fixed;
-    top: 60%;
+    bottom:0%;
     height: 100%;
     height: 552px;
     border-radius: 24px 24px 0px 0px;
