--- a/scss/style.scss
+++ b/scss/style.scss
@@ -55,6 +55,7 @@ body {
   position: relative;
   overflow-x: hidden;
   color: #fff;
+  height: 100%;
 }
 h2 {
   font-family: "GothamBold", sans-serif;
@@ -479,6 +480,7 @@ footer {
   }
 }
 .job {
+  position: relative;
   padding: 80px 0;
   color: #2f214c;
   &__opport {
@@ -533,11 +535,13 @@ footer {
 #wrapper-modal {
   width: 100%;
   height: 100%;
-  display: none;
+  visibility:hidden;
+
 }
 
 #wrapper-modal.active {
-  display: block;
+  visibility: visible;
+
 }
 
 #overlay {
@@ -552,7 +556,7 @@ footer {
 }
 
 #modal-window {
-  position: absolute;
+  position: fixed;
   bottom: 10%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -799,7 +803,7 @@ footer {
     }
   }
   #modal-window {
-    max-width: 100%;
+    max-width: 101%;
   }
   .content {
     padding: 30px;
@@ -1038,7 +1042,7 @@ footer {
   }
 }
 
-@media (max-width: 420px) {
+@media screen and (max-width: 420px) {
   header {
     height: 336px;
   }
@@ -1190,9 +1194,8 @@ footer {
     }
   }
   #modal-window {
-    position: fixed;
     bottom:0%;
-    height: 100%;
+    transform: translate(-50%, 0%);
     height: 552px;
     border-radius: 24px 24px 0px 0px;
   }
