--- a/scss/style.css
+++ b/scss/style.css
@@ -974,6 +974,8 @@ footer {
   }
   .market__prod__products:nth-child(4) {
     border-right: none;
+    display: flex;
+    justify-content: center;
     border-bottom: 1px solid rgba(255, 255, 255, 0.45);
   }
   .market__prod__products:nth-child(5) {
