--- a/scss/style.scss
+++ b/scss/style.scss
@@ -583,7 +583,6 @@ footer {
 .secondwork {
   align-items: start;
 }
-
 @media (max-width: 1280px) {
   .second {
     &__right {
@@ -962,6 +961,8 @@ footer {
         }
         &:nth-child(4) {
           border-right: none;
+          display: flex;
+          justify-content: center;
           border-bottom: 1px solid rgba(255, 255, 255, 0.45);
         }
         &:nth-child(5) {
