--- a/scss/style.css
+++ b/scss/style.css
@@ -966,6 +966,10 @@ footer {
     top: 10%;
   }
 
+  .market__prod__products {
+    display: flex;
+    justify-content: center;
+  }
   .market__prod__products:first-child {
     border-right: none;
   }
@@ -974,8 +978,6 @@ footer {
   }
   .market__prod__products:nth-child(4) {
     border-right: none;
-    display: flex;
-    justify-content: center;
     border-bottom: 1px solid rgba(255, 255, 255, 0.45);
   }
   .market__prod__products:nth-child(5) {
