--- a/scss/style.css
+++ b/scss/style.css
@@ -617,7 +617,7 @@ footer {
   align-items: start;
 }
 
-@media (max-width: 1280px) {
+@media screen and (max-width: 1280px) {
   .second__right {
     padding: 50px;
   }
@@ -635,12 +635,12 @@ footer {
     padding-right: 30px;
   }
 }
-@media (max-width: 1068px) {
+@media screen and (max-width: 1068px) {
   .greatest {
     height: 564px;
   }
 }
-@media (max-width: 1024px) {
+@media screen and (max-width: 1024px) {
   .second__right {
     padding: 40px;
   }
@@ -657,9 +657,13 @@ footer {
     padding: 40px;
   }
 }
-@media (max-width: 960px) {
+@media screen and (max-width: 960px) {
   .img-logo {
     z-index: 3;
+  }
+
+  header, .works {
+    height: 100%;
   }
 
   nav {
@@ -731,6 +735,10 @@ footer {
       opacity: 1;
     }
   }
+  .header {
+    padding-top: 16px;
+    margin-bottom: 28px;
+  }
   .header__navigation {
     flex-direction: column;
     align-items: center;
@@ -738,6 +746,10 @@ footer {
   .header__navigation li {
     margin-bottom: 16px;
     margin-right: 0px;
+  }
+
+  .middle {
+    padding-bottom: 24px;
   }
 
   .activehtml::before {
@@ -799,7 +811,7 @@ footer {
   }
 
   .map {
-    top: 400px;
+    top: 300px;
   }
 
   .secondwork {
@@ -812,7 +824,7 @@ footer {
     padding: 24px 16px;
   }
 }
-@media (max-width: 860px) {
+@media screen and (max-width: 860px) {
   .footer {
     flex-direction: column;
     align-self: start;
@@ -839,7 +851,7 @@ footer {
     padding: 30px;
   }
 }
-@media (max-width: 768px) {
+@media screen and (max-width: 768px) {
   .container {
     padding-left: 16px;
     padding-right: 16px;
@@ -861,7 +873,7 @@ footer {
     height: 100%;
   }
 }
-@media (max-width: 600px) {
+@media screen and (max-width: 600px) {
   footer {
     padding-bottom: 90px;
     position: relative;
@@ -890,7 +902,7 @@ footer {
     bottom: 40px;
   }
 }
-@media (max-width: 576px) {
+@media screen and (max-width: 576px) {
   h4 {
     font-size: 16px;
     line-height: 20px;
@@ -1090,15 +1102,6 @@ footer {
     border-radius: 24px 24px 0px 0px;
   }
 
-  header {
-    height: 336px;
-  }
-
-  .header {
-    padding-top: 16px;
-    margin-bottom: 28px;
-  }
-
   .contact {
     height: 484px;
   }
@@ -1157,10 +1160,6 @@ footer {
   }
   .map img {
     width: 248px;
-  }
-
-  .works {
-    height: 520px;
   }
 
   .work__we {
